--- a/package.json
+++ b/package.json
@@ -23,10 +23,17 @@
     ]
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.3",
+    "@react-navigation/native": "^6.0.12",
+    "@tanstack/react-query": "^4.3.1",
+    "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-paper": "5.0.0-rc.5",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
