--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,10 +10,10 @@
       "@navigation/*": ["./src/navigation/*"],
       "@screens/*": ["./src/screens/*"],
       "@services/*": ["./src/services/*"],
-      "@types/*": ["./src/types/*"],
       "@utils/*": ["./src/utils/*"],
+      "@types": ["./src/types"],
       "@config": ["./src/config"],
-      "@theme": ["./src/theme"]
+      "@theme": ["./src/theme"],
     }
   }
 }
