--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "dependencies": {
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
-    "@tanstack/react-query": "^4.3.1",
+    "@react-navigation/native-stack": "^6.8.0",
+    "@shopify/flash-list": "1.1.0",
+    "@tanstack/react-query": "^4.3.4",
     "axios": "^0.27.2",
     "expo": "~46.0.9",
+    "expo-dev-client": "~1.2.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
