--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-dev-client": "~1.2.1",
+    "expo-navigation-bar": "~1.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-paper": "5.0.0-rc.5",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
