--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --max-warnings=0",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest",
-    "test:watch": "jest --watch --coverage=false --maxWorkers=50%"
+    "test:watch": "jest --watch --coverage=false --maxWorkers=50%",
+    "test:ci": "jest --runInBand --passWithNoTests"
   },
   "husky": {
     "hooks": {
