--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-dev-client": "~1.2.1",
     "expo-navigation-bar": "~1.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.5",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-paper": "5.0.0-rc.5",
