--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "expo": "~46.0.9",
     "expo-dev-client": "~1.2.1",
     "expo-navigation-bar": "~1.3.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.5",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-paper": "5.0.0-rc.5",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "styled-components": "^5.3.5"
